// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render. 1`] = `
<div
  className="community-subscribers"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@bluemist"
            onClick={[Function]}
            size="small"
            username="bluemist"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@bluemist"
              onClick={[Function]}
            >
              bluemist
            </a>
            <span
              className="item-reputation"
            >
              74
            </span>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@foo"
            onClick={[Function]}
            size="small"
            username="foo"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@foo"
              onClick={[Function]}
            >
              foo
            </a>
            <span
              className="item-reputation"
            >
              70
            </span>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@bar"
            onClick={[Function]}
            size="small"
            username="bar"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@bar"
              onClick={[Function]}
            >
              bar
            </a>
            <span
              className="item-reputation"
            >
              65
            </span>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@baz"
            onClick={[Function]}
            size="small"
            username="baz"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@baz"
              onClick={[Function]}
            >
              baz
            </a>
            <span
              className="item-reputation"
            >
              68
            </span>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@lorem"
            onClick={[Function]}
            size="small"
            username="lorem"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@lorem"
              onClick={[Function]}
            >
              lorem
            </a>
            <span
              className="item-reputation"
            >
              51
            </span>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@ipsum"
            onClick={[Function]}
            size="small"
            username="ipsum"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@ipsum"
              onClick={[Function]}
            >
              ipsum
            </a>
            <span
              className="item-reputation"
            >
              75
            </span>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@dolor"
            onClick={[Function]}
            size="small"
            username="dolor"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@dolor"
              onClick={[Function]}
            >
              dolor
            </a>
            <span
              className="item-reputation"
            >
              42
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Active user. 1`] = `
<div
  className="community-subscribers"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@bluemist"
            onClick={[Function]}
            size="small"
            username="bluemist"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@bluemist"
              onClick={[Function]}
            >
              bluemist
            </a>
            <span
              className="item-reputation"
            >
              74
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          admin
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@foo"
            onClick={[Function]}
            size="small"
            username="foo"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@foo"
              onClick={[Function]}
            >
              foo
            </a>
            <span
              className="item-reputation"
            >
              70
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          guest
          <a
            className="btn-edit-role"
            href="#"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@bar"
            onClick={[Function]}
            size="small"
            username="bar"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@bar"
              onClick={[Function]}
            >
              bar
            </a>
            <span
              className="item-reputation"
            >
              65
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          guest
          <a
            className="btn-edit-role"
            href="#"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@baz"
            onClick={[Function]}
            size="small"
            username="baz"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@baz"
              onClick={[Function]}
            >
              baz
            </a>
            <span
              className="item-reputation"
            >
              68
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          guest
          <a
            className="btn-edit-role"
            href="#"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@lorem"
            onClick={[Function]}
            size="small"
            username="lorem"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@lorem"
              onClick={[Function]}
            >
              lorem
            </a>
            <span
              className="item-reputation"
            >
              51
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          guest
          <a
            className="btn-edit-role"
            href="#"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@ipsum"
            onClick={[Function]}
            size="small"
            username="ipsum"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@ipsum"
              onClick={[Function]}
            >
              ipsum
            </a>
            <span
              className="item-reputation"
            >
              75
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          guest
          <a
            className="btn-edit-role"
            href="#"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@dolor"
            onClick={[Function]}
            size="small"
            username="dolor"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@dolor"
              onClick={[Function]}
            >
              dolor
            </a>
            <span
              className="item-reputation"
            >
              42
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          guest
          <a
            className="btn-edit-role"
            href="#"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
